; ModuleID = '/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-data.c_filesys_update_modification_time.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-data.c_filesys_update_modification_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.filesys_directory_node = type { %struct.filesys_directory_node*, i32 }

@now = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.filesys_directory_node*)* @filesys_update_modification_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filesys_update_modification_time(%struct.filesys_directory_node* %0) #0 {
  %2 = alloca %struct.filesys_directory_node*, align 8
  store %struct.filesys_directory_node* %0, %struct.filesys_directory_node** %2, align 8
  br label %3

3:                                                ; preds = %6, %1
  %4 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %2, align 8
  %5 = icmp ne %struct.filesys_directory_node* %4, null
  br i1 %5, label %6, label %13

6:                                                ; preds = %3
  %7 = load i32, i32* @now, align 4
  %8 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %2, align 8
  %9 = getelementptr inbounds %struct.filesys_directory_node, %struct.filesys_directory_node* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 8
  %10 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %2, align 8
  %11 = getelementptr inbounds %struct.filesys_directory_node, %struct.filesys_directory_node* %10, i32 0, i32 0
  %12 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %11, align 8
  store %struct.filesys_directory_node* %12, %struct.filesys_directory_node** %2, align 8
  br label %3

13:                                               ; preds = %3
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
